# alg

./: Cargo.toml
src/: bitfield.rs  clock.rs  drums.rs  encoder.rs  euclid.rs  exec.rs  f32cmp.rs  gen.rs  geom.rs  input.rs  lib.rs  matrx_7_5.rs  pat.rs  ring_buf.rs  rnd.rs  tempo.rs  wave.rs
src/audio/: delay.rs  diffusion.rs  feedback.rs  hadamard.rs  householder.rs  mod.rs  reverb.rs
