[package]
name = "alg"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2021"

[features]
default = ["float"]
float = []

[dependencies]
gcd = "2"
log = "0.4"
defmt = "0.3"
heapless = { version = "0.7.16", features = ["defmt"] }

[dev-dependencies]
rodio = { version = "0.15", default-features = false, features = ['wav'] }
